--- a/store/store.css
+++ b/store/store.css
@@ -1,3 +1,4 @@
+
 html{
     margin-top: 9.6rem;
     margin-left: auto;
@@ -6,6 +7,7 @@ html{
 
 body {
     overflow-y: scroll;
+
 }
 
 .store {
@@ -50,14 +52,17 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 
+
+
 /* Scrollbar Styling */
+
 ::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
+    width: 6px;
+    height: 6px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #ebebeb;
+    background-color: #f5f5f5;
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
@@ -65,7 +70,7 @@ h1, h2, h3, h4, h5, h6 {
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: #d6d6d6;
+    background: #cccccc;
 }
 
 .hvr-grow {
